--- a/Static.KBlog/resrc/less/all.css
+++ b/Static.KBlog/resrc/less/all.css
@@ -20,18 +20,6 @@ main {
   font-family: Consolas;
   max-width: 980px;
   margin: 0 auto;
-  overflow: hidden;
-}
-.edit-icon {
-  width: 16px;
-  height: 16px;
-  cursor: pointer;
-  background-color: #BBBBBB;
-  outline: white 1px solid;
-  content: '+';
-}
-.edit-icon:hover {
-  background-color: #777;
 }
 header {
   font-family: Consolas;
@@ -190,9 +178,11 @@ section {
   width: 100%;
   text-align: center;
   font-size: 12px;
+  padding-bottom: 20px;
 }
 .blogpost figure img {
   width: 100%;
+  padding-bottom: 20px;
 }
 .social-media {
   margin: 0 auto;
@@ -363,5 +353,45 @@ section {
 }
 .about p {
   text-align: center;
+}
+.edit-icon {
+  z-index: 30;
+  position: absolute;
+  right: -36px;
+  top: 0;
+  margin-top: 0;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  background-color: #BBBBBB;
+  outline: white 1px solid;
+  color: white;
+  background-image: url(../img/edit-icon.png);
+  background-position: center center;
+  background-repeat: no-repeat;
+}
+.edit-icon:hover {
+  background-color: #777;
+}
+.blogpost .date .edit-icon {
+  top: -7px;
+}
+.blogpost figure .edit-icon {
+  margin-top: 0;
+  top: 10px;
+  right: 10px;
+}
+.dropzone {
+  cursor: pointer;
+  position: absolute;
+  left: 20px;
+  right: 20px;
+  top: 20px;
+  bottom: 80px;
+  background: rgba(255, 255, 255, 0.6);
+}
+.dropzone span {
+  padding-right: 30px;
+  padding-top: 10px;
 }
 /*# sourceMappingURL=all.css.map */
