--- a/Static.KBlog/resrc/less/blog.css
+++ b/Static.KBlog/resrc/less/blog.css
@@ -28,8 +28,10 @@
   width: 100%;
   text-align: center;
   font-size: 12px;
+  padding-bottom: 20px;
 }
 .blogpost figure img {
   width: 100%;
+  padding-bottom: 20px;
 }
 /*# sourceMappingURL=blog.css.map */
