--- a/Static.KBlog/resrc/less/blog.less
+++ b/Static.KBlog/resrc/less/blog.less
@@ -32,10 +32,12 @@
             width: 100%;
             text-align: center;
             font-size: 12px;
+            padding-bottom: 20px;
         }
 
         img {
             width: 100%;
+            padding-bottom: 20px;
         }
     }
 }
